create seed account for stakemanager

--- a/config_init_stack.exmaple.toml
+++ b/config_init_stack.exmaple.toml
@@ -4,5 +4,6 @@ KeystorePath = "./keys/solana_keys.json"
 
 LsdProgramID = "795MBfkwwtAX4fWiFqZcJK8D91P9tqqtiSRrSNhBvGzq"
 
+## signers
 FeePayerAccount = "ErCsmTQhM9qt17ce8XDTasKo76FEdg2scP2UX4VLxKDb"
 AdminAccount = "GgAy6GnqaPJUdGfCQGMgW2fGMMvmxc3E7a2oizFuCbhF"
