--- a/config_init_stakemanager.exmaple.toml
+++ b/config_init_stakemanager.exmaple.toml
@@ -1,12 +1,14 @@
+
 EndpointList = ["https://api.devnet.solana.com"]
 KeystorePath = "./keys/solana_keys.json"
 
 LsdProgramID = "795MBfkwwtAX4fWiFqZcJK8D91P9tqqtiSRrSNhBvGzq"
 
 StackAddress = "EpgquacesXp8h7nk9j5KcnzDVATFKLE995cuhj1hRbpR"
-LsdTokenMintAddress = "CDAJVkC2cvT2X78PKsah2Wu2ZpXwCiFjZW3p9rxphjsw"
+LsdTokenMintAddress = "7Ba9vKFt7ossKmQqxqm2UBLDKhc8sjYubqUH8d5k4iPa"
 ValidatorAddress = "vgcDar2pryHvMgPkKaZfh8pQy4BJxv7SpwUG7zinWjG"
+StakeManagerAddress = "JAAGMA3nXSFq3QhSMC9Trkf5hneMGoGRLaGtEkmL1Nmj"
 
+## signers
 FeePayerAccount = "ErCsmTQhM9qt17ce8XDTasKo76FEdg2scP2UX4VLxKDb"
 AdminAccount = "GgAy6GnqaPJUdGfCQGMgW2fGMMvmxc3E7a2oizFuCbhF"
-StakeManagerAccount = "6g8ziuefcXnmP1kmCXd7CGxdQrL59CkdnH9C6vQnQYkp"
